<?xml version="1.0"?>
<package format="2">
  <name>pointcloud_image_converter</name>
  <version>0.0.0</version>
  <description>A tool that converts pointcloud into depth and height images</description>

  <maintainer email="xxx@gmail.com">Chengyang Li</maintainer>
  <author email="jiaojh1994@gmail.com">Jianhao Jiao</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>tf_conversions</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>image_transport</depend>

</package>
